--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Main Content -->
     <div style="display: flex;">
         <!-- Products Grid -->
-        <div style="width: 70%; background-color: #f0f0f0; padding: 10px;">
+        <div style="width: 70%; background-color: green; padding: 10px;">
             <div style="display: flex; flex-wrap: wrap; gap: 10px;">
                 <!-- Product 1 -->
                 <div style="width: 30%; background-color: white; border: 1px solid #ccc; padding: 10px; text-align: center;">
